syntax = "proto3";

package auth;

service AuthService {
  rpc AuthenticateUser(AuthenticateUserRequest) returns (AuthenticateUserResponse);
}

message AuthenticateUserRequest {
  string token = 1;
}

message AuthenticateUserResponse {
  int32 id = 1;
}
