syntax = "proto3";

package user;

service UserService {
  rpc SetUserResidentDistrict(SetUserResidentDistrictRequest) returns (Empty);
}

message SetUserResidentDistrictRequest {
  string userId = 1;
  repeated ResidentDistrict residentDistricts = 2;
}

message ResidentDistrict {
  string id = 1;
  int32 level = 2;
}

message Empty {}